SERVER-38177 Fix --repair with --bind_ip

Setting bind ips in server global params causes an error when spinning
up an egress only transport layer.  It's more appropriate in that case
to ignore the bind ips.

(cherry picked from commit 94f6c4d2832e4ec88b30045ceb1907af54725c78)